@@ -183,6 +183,7 @@ Fixes:
    * Fixed a bug that naviframe's focus_next didn't work after changing evenry item to elm_layout.
    * Entry: Fixed a bug with text appending.
    * Fixed a bug in elm_list. Focus_next is needed only when access mode is enabled.
+   * Fix a memory leak of elm_genlist - EINA_LIST_FREE should be used for returned value of elm_genlist_realized_items_get
    
 Removals:
 
